q1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-b
  name: pod-b
  #namespace: ckad-ns1
spec:
  containers:
  - image: nginx
    name: web
    resources: {}
  
  - image: rsyslog
    name: pod-b
    command: ["sleep","3600"]
  restartPolicy: Always
status: {}
