q1-inst.yaml
kind: Pod
apiVersion: v1
metadata:
  name: pod-a
  namespace: ckad-ns1
spec:
  containers:
  - image: httpd
    name: httpserver


---

kind: Pod
apiVersion: v1
metadata:
  name: pod-b
  namespace: ckad-ns1
spec:
  containers:
  - image: nginx
    name: nginxserver
  - image: alpine
    name: alpine
    command: ["sleep","3600"]
