q3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
  namespace: ckad-ns2
spec:
  containers:
  - name: alpine-pod
    image: alpine
    command: ["sleep","3600"]
